[gd_scene load_steps=14 format=3 uid="uid://deg7i3dtq3kts"]

[ext_resource type="Script" path="res://3D/Scripts/Brothers/Player_Camera.gd" id="1_io42p"]
[ext_resource type="PackedScene" uid="uid://32u6080g3xtt" path="res://3D/Assets/Placeholder/Characters/YoungerSibling_Placeholder.glb" id="2_3fepo"]
[ext_resource type="Script" path="res://3D/Scripts/Brothers/Younger_State_Machine/State_Machine_Younger.gd" id="3_nqvev"]
[ext_resource type="Script" path="res://3D/Scripts/Brothers/Younger_State_Machine/Younger_Idle.gd" id="4_l3mib"]
[ext_resource type="Script" path="res://3D/Scripts/Brothers/Younger_State_Machine/Younger_Walk.gd" id="5_gsrc8"]
[ext_resource type="Script" path="res://3D/Scripts/Brothers/Younger_State_Machine/Younger_Run.gd" id="6_ejrn1"]
[ext_resource type="Script" path="res://3D/Scripts/Brothers/Younger_State_Machine/Younger_Jump.gd" id="7_6loq2"]
[ext_resource type="Script" path="res://3D/Scripts/Brothers/Younger_State_Machine/Younger_Fall.gd" id="8_khvsm"]
[ext_resource type="Script" path="res://3D/Scripts/Brothers/Younger_State_Machine/Younger_Grab.gd" id="9_aappk"]
[ext_resource type="Script" path="res://3D/Scripts/Brothers/Younger_State_Machine/Younger_Hang.gd" id="10_oqxpk"]
[ext_resource type="Script" path="res://3D/Scripts/Brothers/Younger_State_Machine/Younger_Climb.gd" id="11_6hejr"]
[ext_resource type="Script" path="res://3D/Scripts/Brothers/Younger_State_Machine/Younger_Shimmy.gd" id="12_0ohbn"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_klf3k"]
radius = 0.250786
height = 1.34159

[node name="YoungerBrother" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03182, 0)
collision_layer = 2
collision_mask = 7
script = ExtResource("1_io42p")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.295836, 0)
shape = SubResource("CapsuleShape3D_klf3k")

[node name="PlayerVisual" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="YoungerSibling_Placeholder" parent="PlayerVisual" instance=ExtResource("2_3fepo")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.005, -1, 0)

[node name="Rays" type="Node3D" parent="PlayerVisual"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.532, 0)

[node name="ChestRays" type="Node3D" parent="PlayerVisual/Rays"]
unique_name_in_owner = true

[node name="Chest" type="RayCast3D" parent="PlayerVisual/Rays/ChestRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.376, 0)
target_position = Vector3(0, 0, -0.4)
hit_from_inside = true

[node name="Chest2" type="RayCast3D" parent="PlayerVisual/Rays/ChestRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.376, 0)
target_position = Vector3(0, 0, -0.4)
hit_from_inside = true

[node name="Chest3" type="RayCast3D" parent="PlayerVisual/Rays/ChestRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0.376, 0)
target_position = Vector3(0, 0, -0.4)
hit_from_inside = true

[node name="HeadClimbRays" type="Node3D" parent="PlayerVisual/Rays"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.269711, 0)

[node name="Head" type="RayCast3D" parent="PlayerVisual/Rays/HeadClimbRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.35, 0.67, 0)
target_position = Vector3(0, 0, -0.8)
hit_from_inside = true

[node name="Head2" type="RayCast3D" parent="PlayerVisual/Rays/HeadClimbRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.670131, 0)
target_position = Vector3(0, 0, -0.8)
hit_from_inside = true

[node name="Head3" type="RayCast3D" parent="PlayerVisual/Rays/HeadClimbRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.35, 0.67, 0)
target_position = Vector3(0, 0, -0.8)
hit_from_inside = true

[node name="Head4" type="RayCast3D" parent="PlayerVisual/Rays/HeadClimbRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.670131, 0)
target_position = Vector3(0, 1.4, -0.8)
hit_from_inside = true

[node name="Head5" type="RayCast3D" parent="PlayerVisual/Rays/HeadClimbRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.35, 0.67, 0)
target_position = Vector3(0, 1.4, -0.8)
hit_from_inside = true

[node name="Head6" type="RayCast3D" parent="PlayerVisual/Rays/HeadClimbRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.35, 0.67, 0)
target_position = Vector3(0, 1.4, -0.8)
hit_from_inside = true

[node name="LedgeHeight" type="RayCast3D" parent="PlayerVisual/Rays"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.001, 0.934, -0.5)
hit_from_inside = true

[node name="LedgeRays" type="Node3D" parent="PlayerVisual/Rays"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.302309, 0.0811958)

[node name="Ledge" type="RayCast3D" parent="PlayerVisual/Rays/LedgeRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.244, -0.3)
target_position = Vector3(0, 0, -0.425)
hit_from_inside = true

[node name="Ledge2" type="RayCast3D" parent="PlayerVisual/Rays/LedgeRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 1.244, -0.3)
target_position = Vector3(0, 0, -0.425)
hit_from_inside = true

[node name="Ledge3" type="RayCast3D" parent="PlayerVisual/Rays/LedgeRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 1.244, -0.3)
target_position = Vector3(0, 0, -0.425)
hit_from_inside = true

[node name="LipRays" type="Node3D" parent="PlayerVisual/Rays"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.302309, 0.0811958)

[node name="Lip" type="RayCast3D" parent="PlayerVisual/Rays/LipRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.167, -0.3)
target_position = Vector3(0, 0, -0.285)
hit_from_inside = true

[node name="Lip2" type="RayCast3D" parent="PlayerVisual/Rays/LipRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 1.167, -0.3)
target_position = Vector3(0, 0, -0.285)
hit_from_inside = true

[node name="Lip3" type="RayCast3D" parent="PlayerVisual/Rays/LipRays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 1.167, -0.3)
target_position = Vector3(0, 0, -0.285)
hit_from_inside = true

[node name="PlayerNormal" type="RayCast3D" parent="PlayerVisual/Rays"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(0, 0, -1)
hit_from_inside = true

[node name="State Machine Younger" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_nqvev")
initial_state = NodePath("Younger_Idle")

[node name="Younger_Climb" type="Node" parent="State Machine Younger" node_paths=PackedStringArray("younger_brother")]
script = ExtResource("11_6hejr")
younger_brother = NodePath("../..")

[node name="Younger_Fall" type="Node" parent="State Machine Younger" node_paths=PackedStringArray("younger_brother")]
script = ExtResource("8_khvsm")
younger_brother = NodePath("../..")

[node name="Younger_Grab" type="Node" parent="State Machine Younger" node_paths=PackedStringArray("younger_brother")]
script = ExtResource("9_aappk")
younger_brother = NodePath("../..")

[node name="Younger_Hang" type="Node" parent="State Machine Younger" node_paths=PackedStringArray("younger_brother")]
script = ExtResource("10_oqxpk")
younger_brother = NodePath("../..")

[node name="Younger_Idle" type="Node" parent="State Machine Younger" node_paths=PackedStringArray("younger_brother")]
script = ExtResource("4_l3mib")
younger_brother = NodePath("../..")

[node name="Younger_Jump" type="Node" parent="State Machine Younger" node_paths=PackedStringArray("younger_brother")]
script = ExtResource("7_6loq2")
younger_brother = NodePath("../..")

[node name="Younger_Run" type="Node" parent="State Machine Younger" node_paths=PackedStringArray("younger_brother")]
script = ExtResource("6_ejrn1")
younger_brother = NodePath("../..")

[node name="Younger_Shimmy" type="Node" parent="State Machine Younger" node_paths=PackedStringArray("younger_brother")]
script = ExtResource("12_0ohbn")
younger_brother = NodePath("../..")

[node name="Younger_Walk" type="Node" parent="State Machine Younger" node_paths=PackedStringArray("younger_brother")]
script = ExtResource("5_gsrc8")
younger_brother = NodePath("../..")
